# catalogo-app

./: .env.example  .env.production  .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  conftest.py  entrypoint.sh  manage.py  pyproject.toml
backend/core/: __init__.py  settings.py  urls.py  wsgi.py
backend/movies/: __init__.py  admin.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/movies/migrations/: 0001_initial.py
backend/tests/movies/: test_api.py
frontend/: .gitignore  Dockerfile  angular.json  nginx-spa.conf  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/movies/: movie.model.ts  movie.service.ts
frontend/src/app/movies/movie-form/: movie-form.component.html  movie-form.component.ts
frontend/src/app/movies/movie-list/: movie-list.component.html  movie-list.component.ts
nginx/: nginx.conf
